--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
     "bootstrap": "^4.6.0",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "reactstrap": "^8.9.0",
-    "web-vitals": "^2.1.4",
-    "prop-types": "^15.8.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -22,9 +22,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prepare": "cd .. && husky install frontend/.husky",
-    "lint": "",
-    "lint:fix": "",
-    "prettify": ""
+    "lint": "eslint src/**/*.{js,jsx} && echo 'Lint complete.'",
+    "lint:fix": "eslint src/**/*.{js,jsx} --fix && echo 'Lint complete.'",
+    "prettify": "prettier src/**/* --check --ignore-unknown && echo 'Prettify complete.'",
+    "prettify:fix": "prettier src/**/* --write --ignore-unknown && echo 'Prettify complete.'"
   },
   "eslintConfig": {
     "extends": [
@@ -50,10 +51,14 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
-    "prettier": "^2.6.0"
+    "lint-staged": "^12.3.7",
+    "prettier": "2.6.0"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
