--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,10 @@ name = "pypi"
 django = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
+pre-commit = "*"
+black = "*"
+flake8 = "*"
+bandit = "*"
 
 [dev-packages]
 
