--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ frontend/build
 .env.development.local
 .env.test.local
 .env.production.local
+.vscode
 
 frontend/npm-debug.log*
 frontend/yarn-debug.log*
