--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.26.0",
     "bootstrap": "^4.6.0",
     "http-proxy-middleware": "^2.0.4",
+    "nanoid": "^3.3.2",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
