--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-notifications": "^1.7.3",
     "react-scripts": "5.0.0",
+    "reactjs-popup": "^2.0.5",
     "reactstrap": "^8.9.0",
     "web-vitals": "^2.1.4"
   },
