Logout button is tentatively done Figured out the 403 forbidden issue as well! Turns out I needed to include the X-CSRFToken header in my axios calls Not sure where exactly i'm going to put the logout button, but it should be functionally complete

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.26.0",
     "bootstrap": "^4.6.0",
     "http-proxy-middleware": "^2.0.4",
+    "js-cookie": "^3.0.1",
     "nanoid": "^3.3.2",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
