linter was wrongly complaining about test files added a jest plugin to resolve the 'errors'

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -9,6 +9,13 @@
     "airbnb",
     "prettier" // should be last
   ],
+  "overrides": [
+    {
+      "files": ["*.test.js", "*.test.jsx"],
+      "plugins": ["jest"],
+      "extends": ["plugin:jest/recommended"]
+    }
+  ],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
