--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.26.0",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^4.6.0",
+    "eslint-plugin-jest": "^26.1.5",
     "http-proxy-middleware": "^2.0.4",
     "js-cookie": "^3.0.1",
     "mime": "^3.0.0",
